fix headings margins overlapping subtitles

--- a/src/components/githubProfileCard/GithubProfileCard.scss
+++ b/src/components/githubProfileCard/GithubProfileCard.scss
@@ -19,6 +19,7 @@
   margin: 0;
   font-size: 40px;
   font-weight: 400;
+  margin-bottom: 2rem;
 }
 
 .location-div {
