--- a/src/containers/blogs/Blog.scss
+++ b/src/containers/blogs/Blog.scss
@@ -20,10 +20,12 @@
 .blog-header-text {
   font-size: 56px;
   font-weight: 400;
+  margin-bottom: 2rem;
 }
 
 .blog-subtitle {
   text-transform: uppercase;
+  margin-bottom: 2rem;
 }
 .blog-main-div > * {
   flex: 1;
