--- a/src/containers/skills/Skills.scss
+++ b/src/containers/skills/Skills.scss
@@ -21,6 +21,7 @@
 .skills-heading {
   font-size: 56px;
   font-weight: 400;
+  margin-bottom: 2rem;
 }
 .subTitle {
   color: $subTitle;
@@ -54,6 +55,7 @@
   .skills-text-subtitle {
     font-size: 16px;
     text-align: center;
+    margin-bottom: 2rem;
   }
   .skills-image-div {
     /* display: none; */
